--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,11 @@
 language: go
+
 env:
   - GO111MODULE=on
-  - GOFLAGS='-mod vendor'
-go:
-  - 1.12.x
+    GOFLAGS="-mod=vendor"
+
+git:
+  depth: 1
 
 install: true
 
@@ -11,7 +13,7 @@ notifications:
   email: false
 
 before_script:
-  - go install github.com/golangci/golangci-lint/cmd/golangci-lint
+  - GOFLAGS="" go get github.com/golangci/golangci-lint/cmd/golangci-lint
 
 script:
   - golangci-lint run
