сделать дополнительную информацию в шаблонах

--- a/example/example.yaml
+++ b/example/example.yaml
@@ -21,6 +21,14 @@ example:
       name: string_param
       destination: URL
       type: string
-  body: "{{ range $key, $value := . }} \n *{{ $key }}*: {{ $value }} \n {{ end }}"
+  body: "
+  *URL requested*: {{.meta.url}}
+  \n
+  *params*:
+  {{ range $key, $value := .params }} *{{ $key }}*: {{ $value }} \n {{ end }}
+  \n
+  *responce*:
+  {{ range $key, $value := .responce }} *{{ $key }}*: {{ $value }} \n {{ end }}
+  "
   url_name: example
   help: "simple example hand"
