--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -40,4 +40,19 @@ jobs:
         GO111MODULE: on
         GOFLAGS: -mod=vendor
       run: go test -v -race ./...
-     
+
+  linting:
+    name: Lint
+    runs-on: ubuntu-latest
+    steps:
+    - name: Set up Go 1.13
+      uses: actions/setup-go@v1
+      with:
+        go-version: 1.13
+      id: go
+
+    - name: Check out code into the Go module directory
+      uses: actions/checkout@v1
+
+    - name: Lint
+      uses: matoous/golangci-lint-action@v1.1.0
