Это условие пока лишнее

--- a/.github/workflows/compose_deploy.yml
+++ b/.github/workflows/compose_deploy.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
     - support_compose
-    paths:
-    - compose_example/docker-compose.yml
+    # paths:
+    # - compose_example/docker-compose.yml
 jobs:
   deploy_compose:
     name: deploy_compose
