--- a/.github/workflows/handwitch_deploy.yml
+++ b/.github/workflows/handwitch_deploy.yml
@@ -1,11 +1,13 @@
-name: example bot service
+name: Publish Docker image
 on:
   push:
     branches:
     - support_compose
     paths:
-      example/server.go
-      example/Dockerfile
+      main.go
+      go.mod
+      go.sum
+      pkg
 jobs:
   push_to_registry:
     name: Push Docker image to Docker Hub
@@ -16,8 +18,7 @@ jobs:
       - name: Push to Docker Hub
         uses: docker/build-push-action@v1
         with:
-          context: example
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: glazedcurd/handwitchexampleserver
+          repository: glazedcurd/handwitch
           tag_with_ref: true
