--- a/.github/workflows/example_server_deploy.yml
+++ b/.github/workflows/example_server_deploy.yml
@@ -8,7 +8,7 @@ on:
       example/Dockerfile
 jobs:
   push_to_registry:
-    name: Push Docker image to Docker Hub
+    name: push server example image to Docker Hub
     runs-on: ubuntu-latest
     steps:
       - name: Check out the repo
