--- a/.github/workflows/compose_deploy.yml
+++ b/.github/workflows/compose_deploy.yml
@@ -3,8 +3,8 @@ on:
   push:
     branches:
     - support_compose
-    paths:
-    - compose_example/docker-compose.yml
+    # paths:
+    # - compose_example/docker-compose.yml
 jobs:
   deploy_compose:
     name: deploy_compose
@@ -29,7 +29,7 @@ jobs:
         key: ${{ secrets.KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          docker-compose up -d \
+          docker-compose up -d --force-recreate \
             -e TELEGRAM_BOT_SSL_PUB_NAME=YOURPUBLIC.pem \
             -e TELEGRAM_BOT_SSL_PRIV_NAME=YOURPRIVATE.key \
             -e HANDWITCH_USE_WEBHOOK=${{ secrets.HANDWITCH_USE_WEBHOOK }} \
