Попробуем передать аргументы так

--- a/.github/workflows/compose_deploy.yml
+++ b/.github/workflows/compose_deploy.yml
@@ -29,8 +29,8 @@ jobs:
         key: ${{ secrets.KEY }}
         port: ${{ secrets.PORT }}
         script: |
-          docker-compose up -d --force-recreate \
-            -e TELEGRAM_BOT_SSL_PUB_NAME=YOURPUBLIC.pem \
-            -e TELEGRAM_BOT_SSL_PRIV_NAME=YOURPRIVATE.key \
-            -e HANDWITCH_USE_WEBHOOK=${{ secrets.HANDWITCH_USE_WEBHOOK }} \
-            -e HANDWITCH_TELEGRAMM_TOKEN=${{ secrets.HANDWITCH_TELEGRAMM_TOKEN }}
+          TELEGRAM_BOT_SSL_PUB_NAME=YOURPUBLIC.pem \
+          TELEGRAM_BOT_SSL_PRIV_NAME=YOURPRIVATE.key \
+          HANDWITCH_USE_WEBHOOK=${{ secrets.HANDWITCH_USE_WEBHOOK }} \
+          HANDWITCH_TELEGRAMM_TOKEN=${{ secrets.HANDWITCH_TELEGRAMM_TOKEN }}docker-compose up -d --force-recreate
+            
