--- a/.github/workflows/compose_deploy.yml
+++ b/.github/workflows/compose_deploy.yml
@@ -32,5 +32,6 @@ jobs:
           TELEGRAM_BOT_SSL_PUB_NAME=YOURPUBLIC.pem \
           TELEGRAM_BOT_SSL_PRIV_NAME=YOURPRIVATE.key \
           HANDWITCH_USE_WEBHOOK=${{ secrets.HANDWITCH_USE_WEBHOOK }} \
-          HANDWITCH_TELEGRAMM_TOKEN=${{ secrets.HANDWITCH_TELEGRAMM_TOKEN }}docker-compose up -d --force-recreate
-            
+          HANDWITCH_TELEGRAMM_TOKEN=${{ secrets.HANDWITCH_TELEGRAMM_TOKEN }}
+          docker-compose up -d --force-recreate
+
