--- a/.github/workflows/compose_deploy.yml
+++ b/.github/workflows/compose_deploy.yml
@@ -29,6 +29,7 @@ jobs:
         key: ${{ secrets.KEY }}
         port: ${{ secrets.PORT }}
         script: |
+          cd /HandWitch
           TELEGRAM_BOT_SSL_PUB_NAME=YOURPUBLIC.pem \
           TELEGRAM_BOT_SSL_PRIV_NAME=YOURPRIVATE.key \
           HANDWITCH_USE_WEBHOOK=${{ secrets.HANDWITCH_USE_WEBHOOK }} \
