--- a/.github/workflows/example_server_deploy.yml
+++ b/.github/workflows/example_server_deploy.yml
@@ -3,9 +3,9 @@ on:
   push:
     branches:
     - support_compose
-    paths:
-      example/server.go
-      example/Dockerfile
+    # paths:
+    #   example/server.go
+    #   example/Dockerfile
 jobs:
   push_to_registry:
     name: push server example image to Docker Hub
@@ -17,7 +17,7 @@ jobs:
         uses: docker/build-push-action@v1
         with:
           context: example
+          file: example/Dockerfile
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
           repository: glazedcurd/handwitchexampleserver
-          tag_with_ref: true
