--- a/.github/workflows/example_server_deploy.yml
+++ b/.github/workflows/example_server_deploy.yml
@@ -13,11 +13,13 @@ jobs:
     steps:
       - name: Check out the repo
         uses: actions/checkout@v2
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
       - name: Push to Docker Hub
         uses: docker/build-push-action@v2
         with:
-          context: example
-          file: example/Dockerfile
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          repository: glazedcurd/handwitchexampleserver
+          push: true
+          tags: glazedcurd/handwitchexampleserver:latest
