--- a/.github/workflows/example_server_deploy.yml
+++ b/.github/workflows/example_server_deploy.yml
@@ -11,6 +11,10 @@ jobs:
     name: push server example image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Check out the repo
         uses: actions/checkout@v2
       - name: Login to DockerHub
