--- a/.github/workflows/handwitch_deploy.yml
+++ b/.github/workflows/handwitch_deploy.yml
@@ -13,10 +13,13 @@ jobs:
     name: deploy handwitch image to Docker Hub
     runs-on: ubuntu-latest
     steps:
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v1
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v1
       - name: Check out the repo
         uses: actions/checkout@v2
-      -
-        name: Login to DockerHub
+      - name: Login to DockerHub
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
