--- a/.github/workflows/example_server_deploy.yml
+++ b/.github/workflows/example_server_deploy.yml
@@ -26,5 +26,6 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           context: example
+          file: example/Dockerfile
           push: true
           tags: glazedcurd/handwitchexampleserver:latest
