вернуть удалённый image

--- a/compose_example/docker-compose.yml
+++ b/compose_example/docker-compose.yml
@@ -2,6 +2,7 @@ version: "3.3"
 services:
   bot:
     restart: on-failure
+    image: glazedcurd/handwitch 
     volumes:
       - ./whitelist.json:/HandWitch/whitelist.json
       - ./descriptions_compose.yaml:/HandWitch/descriptions.yaml
