делаем деплой только из мастера

--- a/.github/workflows/compose_deploy.yml
+++ b/.github/workflows/compose_deploy.yml
@@ -2,7 +2,7 @@ name: compose_file_deploy
 on:
   push:
     branches:
-    - support_compose
+    - master
     paths:
     - compose_example/docker-compose.yml
 jobs:
