--- a/.github/workflows/example_server_deploy.yml
+++ b/.github/workflows/example_server_deploy.yml
@@ -2,7 +2,7 @@ name: example bot service
 on:
   push:
     branches:
-    - support_compose
+    - master
     paths:
     - example/server.go
     - example/Dockerfile
