Расширить определение необходимости передеплоя образа бота

--- a/.github/workflows/handwitch_deploy.yml
+++ b/.github/workflows/handwitch_deploy.yml
@@ -7,7 +7,11 @@ on:
     - main.go
     - go.mod
     - go.sum
-    - pkg
+    - Dockerfile
+    - 'pkg/**'
+    - 'cmd/**'
+    - 'vendor/**'
+    - 'compose_example/utils/**'
 jobs:
   push_to_registry:
     name: deploy handwitch image to Docker Hub
