--- a/.github/workflows/compose_deploy.yml
+++ b/.github/workflows/compose_deploy.yml
@@ -12,24 +12,26 @@ jobs:
     steps:
     - uses: actions/checkout@master
     - name: send new compose file on server
-      uses: appleboy/scp-action@master
+      uses: appleboy/scp-action@v0.1.2
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
+        passphrase: ${{ secrets.KEY_PASS }}
         port: ${{ secrets.PORT }}
         source: "compose_example/docker-compose.yml"
-        target: "/HandWitch/"
+        target: "/projects/HandWitch"
         strip_components: 1
     - name: apply compose file
-      uses: appleboy/ssh-action@master
+      uses: appleboy/ssh-action@v0.1.4
       with:
         host: ${{ secrets.HOST }}
         username: ${{ secrets.USERNAME }}
         key: ${{ secrets.KEY }}
+        passphrase: ${{ secrets.KEY_PASS }}
         port: ${{ secrets.PORT }}
         script: |
-          cd /HandWitch
+          cd /projects/HandWitch
           docker-compose pull
           TELEGRAM_BOT_SSL_PUB_NAME=YOURPUBLIC.pem \
           TELEGRAM_BOT_SSL_PRIV_NAME=YOURPRIVATE.key \
